--- a/page-offers.html
+++ b/page-offers.html
@@ -43,48 +43,51 @@
     </nav>
 
     <main id="main-display" class="container">
-        <input type="button" value="Get Offer List" onclick="CheckAccountOffers()" />
+        <div class="card"
+            style="background-image: url(https://gateway.fxhash.xyz/ipfs/QmRyum7v2jovbUrAZWYfVGAvSLsEYwhwTbZuBUK9JQon6R)">
+            <div class="card-header">
+                <img class="holder-img"
+                    src="https://media.fxhash.xyz/w_256/QmU4QCnu5qVxLXzzX3ooWbq9ACqxcxh4EW49huDNDLG4Qm" />
+                <div class="holder-name">Newyellow</div>
+            </div>
+            <div class="card-body">
+            </div>
 
-        <div id="token-display">
+            <div class="card-footer">
+                <h5 class="token-title">Card title</h5>
+                <h5 class="token-id">
+                    <a class="check-page btn btn-outline-warning" href="#123" target="_blank">#20963</a>
+                    <a class="check-holdings btn btn-outline-light" href="#123" target="_blank">Check Holdings</a>
+                </h5>
 
-            <div class="card"
-                style="background-image: url(https://gateway.fxhash.xyz/ipfs/QmRyum7v2jovbUrAZWYfVGAvSLsEYwhwTbZuBUK9JQon6R)">
-                <div class="card-header">
-                    <img class="holder-img"
-                        src="https://media.fxhash.xyz/w_256/QmU4QCnu5qVxLXzzX3ooWbq9ACqxcxh4EW49huDNDLG4Qm" />
-                    <div class="holder-name">Newyellow</div>
-                </div>
-                <div class="card-body">
-                    123
-                </div>
-
-                <div class="card-footer">
-                    <h5 class="token-title">Card title</h5>
-                    <h5 class="token-id"><a href="#123" target="_blank">#20963</a></h5>
-
-                    <div class="container">
-                        <div class="row">
-                            <div id="offer-string" class="col">Offer 234xtz</div>
-                        </div>
+                <div class="container">
+                    <div class="row">
+                        <div id="offer-string" class="col">Offer 234xtz</div>
                     </div>
+                </div>
 
-                    <div class="container">
-                        <div class="row">
-                            <div id="market-string" class="col">54 listed</div>
-                        </div>
+                <div class="container">
+                    <div class="row">
+                        <div id="market-string" class="col">54 listed</div>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div id="status-bar" class="container mb-2"></div>
+
+        <div id="token-display">
+
 
         </div>
     </main>
 
     <script>
-        let tokenTemplate = $('#token-display .card');
+        let tokenTemplate = $('#main-display .card');
         tokenTemplate.css('display', 'none');
 
         $(window).on('load', function () {
-            // CheckAccountOffers();
+            CheckAccountOffers();
         });
 
         const originalQuery = `
@@ -99,6 +102,10 @@
                         thumbnailUri
                         name
                         id
+                        activeListing {
+                            amount
+                            price
+                        }
                         issuer {
                             name
                             id
@@ -122,6 +129,9 @@
         async function CheckAccountOffers() {
 
             let wallets = getWallets();
+            $('#status-bar').html('loading data ...');
+            let offerCount = 0;
+
 
             let requestCount = Math.floor(wallets.length / 10);
             if (wallets.length % 10 > 0)
@@ -147,10 +157,13 @@
                         let userName = userDatas[index].name;
                         let avatarImgUrl = getIpfsUrl(userDatas[index].avatarUri);
                         addUserTokens(userDatas[index].offersReceived, userName, avatarImgUrl);
+
+                        offerCount ++;
                     }
                 }
-
             }
+
+            $('#status-bar').html(`found ${offerCount} offers`);
         }
 
         function addUserTokens(tokens, userName, avatarUrl) {
@@ -194,7 +207,7 @@
             let newObj = tokenTemplate.clone();
             newObj.css('display', 'block');
 
-            newObj.on('click', () => {
+            newObj.find('.card-body').on('click', () => {
                 window.open('https://fxhash.xyz/gentk/' + offerData.objkt.id);
             });
 
@@ -209,27 +222,34 @@
 
             // token id
             let projectId = offerData.objkt.issuer.id;
-            $(newObj).find('.token-id a').attr('href', `https://fxhash.xyz/generative/${projectId}`);
-            $(newObj).find('.token-id a').html(`#${projectId}`);
+            $(newObj).find('.token-id .check-page').attr('href', `https://fxhash.xyz/generative/${projectId}`);
+            $(newObj).find('.token-id .check-page').html(`#${projectId}`);
+
+            $(newObj).find('.token-id .check-holdings').attr('href', `page-tokens.html?project_id=${projectId}`);
 
             // token name
             $(newObj).find('.token-title').html(offerData.objkt.name);
 
             // process price and market status
             let offerPrice = xtzStrToValue(offerData.price);
+            let listedPrice = "--";
+
+            if (offerData.objkt.activeListing != null)
+                listedPrice = xtzStrToValue(offerData.objkt.activeListing.price);
+
             let floorPrice = xtzStrToValue(offerData.objkt.issuer.marketStats.floor);
             let offerPercent = Math.floor(offerPrice / floorPrice * 100);
 
             let percentClass = "average";
 
-            if(offerPercent > 150)
+            if (offerPercent > 150)
                 percentClass = "high";
             else if (offerPercent < 100)
                 percentClass = "low";
 
-            $(newObj).find('#offer-string').html(`Offer: ${offerPrice} <span class="${percentClass}">(${offerPercent}%)</span>`);
+            $(newObj).find('#offer-string').html(`Offer: ${offerPrice} <span class="${percentClass}">(${offerPercent}%)</span><br />listed: ${listedPrice}`);
 
-            $(newObj).find('#market-string').html(`floor: ${floorPrice}  listed: ${offerData.objkt.issuer.marketStats.listed}`);
+            $(newObj).find('#market-string').html(`floor: ${floorPrice}<br />listed items: ${offerData.objkt.issuer.marketStats.listed}`);
 
             $('#token-display').append(newObj);
         }
