--- a/page-settings.html
+++ b/page-settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitelist checker</title>
+    <title>fxHelper - settings</title>
 
     <script src="src/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@
 <body>
     <nav id="main-menu" class="navbar navbar-dark navbar-expand-lg bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Newyellow fxhash helper</a>
+            <a class="navbar-brand" href="index.html">fxHelper</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,8 +45,8 @@
 
     <main id="main-display" class="container">
 
-        <div id="wallet-modify-form" style="display: none;">
-            <label class="form-label">Paste your address list</label>
+        <div id="wallet-modify-form" class="container mb-2" style="display: none;">
+            <label class="form-label">Paste your address list<br />(the wallet name is just an alias for you to recognize your wallets)</label>
             <div class="input-group">
                 <textarea id="wallet-list-input" rows="10" class="form-control" aria-label="With textarea"
                     placeholder="wallet name 1, adress 1;&#10;wallet name 2, adress 2;&#10;......"></textarea>
