--- a/page-tokens.html
+++ b/page-tokens.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitelist checker</title>
+    <title>fxHelper - tokens</title>
 
     <script src="src/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@
 <body>
     <nav id="main-menu" class="navbar navbar-dark navbar-expand-lg bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Newyellow fxhash helper</a>
+            <a class="navbar-brand" href="index.html">fxHelper</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -115,7 +115,7 @@
         const originalQuery = `
         query HoldingTokens {
             users(filters: {id_in: $$userIds$$}) {
-                objkts(filters: { $$objktsFilter$$ }) {
+                objkts(filters: { $$objktsFilter$$ }, skip: $$skipCount$$ ) {
                     activeListing {
                         price
                     }
@@ -197,6 +197,15 @@
 
                     for (let t = 0; t < tokens.length; t++)
                         tokenDatas[userAddress].tokens.push(tokens[t]);
+                    
+                    // there are more tokens
+                    if(tokens.length >= 20)
+                    {
+                        let moreTokens = await loadAllTokens(userAddress, projectIds, queryStrings);
+
+                        for(let t=0; t< moreTokens.length; t++)
+                            tokenDatas[userAddress].tokens.push(moreTokens[t]);
+                    }
                 }
             }
 
@@ -219,7 +228,7 @@
             $('#status-bar').html(`tokens found: ${tokenCount}`);
         }
 
-        async function processGraphQLQuery(userIds, issuerIds, queryDatas) {
+        async function processGraphQLQuery(userIds, issuerIds, queryDatas, skipNum = 0) {
 
             let userIdString = arrayToGraphQLString(userIds, true);
             let projectIdString = arrayToGraphQLString(issuerIds);
@@ -242,7 +251,7 @@
                 objktFilterString = `issuer_in: ${projectIdString}, searchQuery_eq: "${objktFilterString}"`;
 
             newQuery = newQuery.replace('$$objktsFilter$$', objktFilterString);
-
+            newQuery = newQuery.replace('$$skipCount$$', skipNum);
             // do query
             let data = await fetchGraphQL(newQuery, "HoldingTokens");
             console.log(data);
@@ -268,6 +277,34 @@
             return jsonData.data;
         }
 
+        async function loadAllTokens(userAddress, queryIds, queryStrings) {
+            let additionalTokens = [];
+            let skipCount = 20;
+
+            while(true)
+            {
+                let newDatas = await processGraphQLQuery([userAddress], queryIds, queryStrings, skipCount);
+                let tokens = newDatas.users[0].objkts;
+
+                for(let i=0; i< tokens.length; i++)
+                {
+                    additionalTokens.push(tokens[i]);
+                }
+
+                if(tokens.length >= 20)
+                {
+                    skipCount += 20;
+                    continue;
+                }
+                else
+                {
+                    break;
+                }
+            }
+
+            return additionalTokens;
+        }
+
         function addGenTokenObject(userName, userImgUrl, tokenData) {
 
             let newObj = tokenTemplate.clone();
@@ -288,7 +325,7 @@
 
             // token id
             let projectId = tokenData.issuer.id;
-            $(newObj).find('.token-id .check-page').attr('href', `https://fxhash.xyz/generative/${projectId}`);
+            $(newObj).find('.token-id .check-page').attr('href', `https://fxhash.xyz/marketplace/generative/${projectId}`);
             $(newObj).find('.token-id .check-page').html(`#${projectId}`);
 
             $(newObj).find('.token-id .check-holdings').attr('href', `page-tokens.html?project_id=${projectId}`);
