--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVZB619TWH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-CVZB619TWH');
+    </script>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +57,9 @@
         <br />
         Your wallet data only stores in your browser's local storage.<br />
         <br />
-        If you have any question or suggestions, you can Email to <a href="mailto:newyellow2@gmail.com" target="_blank">newyellow2@gmail.com</a> or message me via Twitter <a href="https://twitter.com/newyellow2" target="_blank">@newyellow2</a><br />
+        If you have any question or suggestions, you can Email to <a href="mailto:newyellow2@gmail.com"
+            target="_blank">newyellow2@gmail.com</a> or message me via Twitter <a href="https://twitter.com/newyellow2"
+            target="_blank">@newyellow2</a><br />
 
     </main>
 </body>
